# Refund-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: database.py  event_bus.py  main.py  models.py  requirements.txt  schemas.py  support_agent.db
backend/agent/: graph.py  policy.py  prompts.py  state.py  tools.py
backend/data/: crm.json  policy.md
backend/routers/: admin.py  chat.py  stream.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AdminPanel.jsx  ChatPanel.jsx  ChatWindow.jsx  LogEntry.jsx  MessageBubble.jsx
frontend/src/hooks/: useWebSocket.js
