[project]
name = "refund-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "fastapi>=0.136.3",
    "langchain>=1.3.8",
    "langchain-anthropic>=1.4.5",
    "langchain-core>=1.4.6",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "websockets>=15.0.1",
]
