[project]
name = "refund-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.109.1",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=0.3.7",
    "langchain-anthropic>=1.4.5",
    "langchain-core>=0.3.15",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=1.3.0",
    "langgraph>=0.2.28",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.0",
    "websockets>=15.0.1",
]
